--- a/DevOps/NodeRED/CustomLibraries/latlon-ellips-vincenty.html
+++ b/DevOps/NodeRED/CustomLibraries/latlon-ellips-vincenty.html
@@ -1,6 +1,6 @@
 <script type="text/javascript">
   RED.nodes.registerType('latlon-Vincenty',{
-      category: 'Innovent',
+      category: 'Custom',
       color: '#16A085',
       defaults: {
           name: {value:""}
