--- a/DevOps/NodeRED/CustomLibraries/distance-spherical.html
+++ b/DevOps/NodeRED/CustomLibraries/distance-spherical.html
@@ -1,6 +1,6 @@
 <script type="text/javascript">
   RED.nodes.registerType('distance-spherical', {
-    category: 'Innovent',
+    category: 'Custom',
     color: '#16A085',
     defaults: {
       name: { value: "" }
