--- a/DevOps/NodeRED/CustomLibraries/distance-bearing-vincenty.html
+++ b/DevOps/NodeRED/CustomLibraries/distance-bearing-vincenty.html
@@ -1,6 +1,6 @@
 <script type="text/javascript">
   RED.nodes.registerType('distance-bearing-vincenty', {
-    category: 'Innovent',
+    category: 'Custom',
     color: '#16A085',
     defaults: {
       name: { value: "" }
